--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@ http://cdn.socket.io/socket.io-1.4.5.js"
   var ctx = document.getElementById("ctx").getContext("2d");
   ctx.font = '30px Arial';
 
+  var localMouseX = 0;
+  var localMouseY = 0;
+
   var socket = io();
 
   socket.emit('test', {
@@ -23,7 +26,29 @@ http://cdn.socket.io/socket.io-1.4.5.js"
     ctx.clearRect(0, 0, 500, 500);
 
     for(var i = 0; i < data.length; i++){
-      ctx.fillText('P', data[i].x, data[i].y);
+
+      //Draw number at server mouse position
+    //  ctx.fillText('.', data[i].x, data[i].y);
+      ctx.fillRect(localMouseX - 5, localMouseY - 5, 6, 6);
+      ctx.fillText(data[i].number, data[i].x, data[i].y);
     }
   });
+
+
+
+  //Handle mouse input
+  document.onmousedown = function(event){
+      socket.emit('mouseClick',{mouseState : true});
+  }
+  document.onmouseup = function(event){
+      socket.emit('mouseClick',{mouseState : false});
+  }
+
+  document.onmousemove = function(event){
+      var x = event.clientX;
+      var y = event.clientY;
+      localMouseX = x;
+      localMouseY = y;
+      socket.emit('mouseMove',{mouseX: x, mouseY: y});
+  }
 </script>
